crates/cyril-ui/src/snapshots/cyril_ui__floor_tests__roomy_approval_80x24.snap
---
source: crates/cyril-ui/src/floor_tests.rs
expression: "render_frame(&approval, 80, 24)?"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "main                                                                            ",
        "  chat-1                                                                       ▲",
        "                                                                               █",
        "You:                                                                           █",
        "  chat-2                                                                       █",
        "                                                                               █",
        "You:                                                                           █",
        "  chat-3  ┌ Permission Required ─────────────────────────────────────┐         █",
        "          │Allow cargo test?                                         │         █",
        "You:      │                                                          │         █",
        "  chat-4  │  Preview unavailable                                     │         ║",
        "          │                                                          │         ║",
        "You:      │▸ Option 0                                                │         ║",
        "  chat-5  │  Option 1                                                │         ║",
        "          │  Option 2                                                │         ║",
        "You:      │                                                          │         ║",
        "  chat-6  └──────────────────────────────────────────────────────────┘         ║",
        "                                                                               ▼",
        "┌ > ───────────────────────────────────────────────────────────────────────────┐",
        "│reply█                                                                        │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "cyril                                                                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(5), bg: Indexed(2), underline: Reset, modifier: BOLD,
        x: 4, y: 0, fg: Reset, bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 3, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 6, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 7, fg: Indexed(20), bg: Reset, underline: Reset, modifier: BOLD,
        x: 32, y: 7, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 8, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 9, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 9, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 10, fg: Indexed(24), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 10, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 11, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 12, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 12, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Indexed(5), bg: Indexed(4), underline: Reset, modifier: BOLD,
        x: 21, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 12, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: Indexed(30), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 13, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 13, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 14, fg: Indexed(30), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 14, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 14, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 15, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 15, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 15, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 10, y: 16, fg: Indexed(20), bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 16, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Indexed(23), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 4, y: 18, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 6, y: 19, fg: Indexed(5), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 7, y: 19, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Indexed(24), bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 5, y: 23, fg: Reset, bg: Indexed(2), underline: Reset, modifier: NONE,
    ]
}
