crates/cyril-ui/src/snapshots/cyril_ui__floor_tests__roomy_idle_80x24.snap
---
source: crates/cyril-ui/src/floor_tests.rs
expression: "render_frame(&idle, 80, 24)?"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "No session                                                                      ",
        "  chat-1                                                                       ▲",
        "                                                                               █",
        "You:                                                                           █",
        "  chat-2                                                                       █",
        "                                                                               █",
        "You:                                                                           █",
        "  chat-3                                                                       █",
        "                                                                               █",
        "You:                                                                           █",
        "  chat-4                                                                       ║",
        "                                                                               ║",
        "You:                                                                           ║",
        "  chat-5                                                                       ║",
        "                                                                               ║",
        "You:                                                                           ║",
        "  chat-6                                                                       ║",
        "                                                                               ▼",
        "┌ > ───────────────────────────────────────────────────────────────────────────┐",
        "│█                                                                             │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "cyril                                                                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(24), bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: Reset, bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 3, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 6, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 9, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 12, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 15, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Indexed(23), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 4, y: 18, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Indexed(5), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Indexed(24), bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 5, y: 23, fg: Reset, bg: Indexed(2), underline: Reset, modifier: NONE,
    ]
}
