crates/cyril-ui/src/snapshots/cyril_ui__floor_tests__roomy_inflow_80x24.snap
---
source: crates/cyril-ui/src/floor_tests.rs
expression: "render_frame(&inflow, 80, 24)?"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "No session                                                                      ",
        "                                                                               ▲",
        "You:                                                                           ║",
        "  chat-5                                                                       ║",
        "                                                                               █",
        "You:                                                                           █",
        "  chat-6                                                                       ║",
        "                                                                               ▼",
        "┌ > ───────────────────────────────────────────────────────────────────────────┐",
        "│draft-1                                                                       │",
        "│draft-2                                                                       │",
        "│draft-3█                                                                      │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "  @fence-file-1.rs                                                              ",
        "  @fence-file-2.rs                                                              ",
        "  @fence-file-3.rs                                                              ",
        "  @fence-file-4.rs                                                              ",
        "  @fence-file-5.rs                                                              ",
        "▸ @fence-file-6.rs                                                              ",
        "  @fence-file-7.rs                                                              ",
        "  @fence-file-8.rs                                                              ",
        "  @fence-file-9.rs                                                              ",
        "  @fence-file-10.rs                                                             ",
        "cyril                                                                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(24), bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: Reset, bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 2, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Indexed(10), bg: Indexed(1), underline: Reset, modifier: BOLD,
        x: 4, y: 5, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Indexed(23), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Indexed(5), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Indexed(24), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 18, y: 13, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 18, y: 14, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 18, y: 15, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 18, y: 16, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 18, y: 17, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Indexed(5), bg: Indexed(29), underline: Reset, modifier: BOLD,
        x: 18, y: 18, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 18, y: 19, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 18, y: 20, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 18, y: 21, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Indexed(27), bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 19, y: 22, fg: Reset, bg: Indexed(1), underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Indexed(24), bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 5, y: 23, fg: Reset, bg: Indexed(2), underline: Reset, modifier: NONE,
    ]
}
